Fix email label being cut off in safari mobile

--- a/santashop-app/src/app/features/v2/sign-in/sign-in.page.scss
+++ b/santashop-app/src/app/features/v2/sign-in/sign-in.page.scss
@@ -16,3 +16,7 @@
 ion-input {
 	--padding-start: 24px;
 }
+
+ion-label {
+	min-width: 42px;
+}
